updates to designer and home page

--- a/design.html
+++ b/design.html
@@ -101,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<h4>Get Started</h4>
 									<ul>
 										<li><a href="#">Gold Leaf Nameplates</a></li>
-										<li><a href="#">Design Now</a></li>
+										<li><a href="design.html">Design Now</a></li>
 										<li><a href="#">Gallery</a></li>
 										<li><a href="#">Font Selection</a></li>
 										<li><a href="#">Nameplate Essentials</a></li>	
@@ -154,7 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 </div>
 <!---->	
-<div class="slider">
+<!-- <div class="slider">
 	  <div class="callbacks_container">
 	     <ul class="rslides" id="slider">
 	         <li>
@@ -183,64 +183,62 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	         </li>
 	      </ul>
 	  </div>
-  </div>
+  </div> -->
 <!---->
 <script src="js/bootstrap.js"> </script>
 
-<div class="row" style="margin-top: 5%">
-<button type="button" class="col-md-2 col-md-offset-5 btn btn-primary btnDesign" id="designButt">Design Now</button>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3 text-center">Design Your Titleplate</h1>
+    <p class="lead text-center">Designing a titleplate has never been easier. Get your design ready in a few easy steps and we will ship it out with your specifications seamlessly integrated.</p>
+  </div>
 </div>
-
-<script type="text/javascript">
-    document.getElementById("designButt").onclick = function () {
-        location.href = "design.html";
-    };
-</script>
 
 <div class="items">
 	 <div class="container">
+	 	<h2 class="text-center">Step 1. Select Your Design</h2>
 		 <div class="items-sec">
 			 <div class="col-md-3 feature-grid">
-				 <a href="design.html"><img src="images/nameplate.jpg" alt=""/>	
+				 <a href="#/"><img src="images/nameplate.jpg" alt=""/>	
 					 <div class="arrival-info">
 						 <h4>Plate #1</h4>
 						 <p>$9.99</p>
 					 </div>
 					 <div class="viw">
-						<a href="design.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>View</a>
+						<a href="#/"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Select</a>
 					 </div>
 				  </a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="design.html"><img src="images/nameplate.jpg" alt=""/>	
+				 <a href="#/"><img src="images/nameplate.jpg" alt=""/>	
 					 <div class="arrival-info">
 						 <h4>Plate #2</h4>
 						 <p>$10.49</p>
 					 </div>
 					 <div class="viw">
-						<a href="design.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>View</a>
+						<a href="#/"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Select</a>
 					 </div>
 				  </a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="design.html"><img src="images/nameplate.jpg" alt=""/>	
+				 <a href="#/"><img src="images/nameplate.jpg" alt=""/>	
 					 <div class="arrival-info">
 						 <h4>Plate #3</h4>
 						 <p>$10.99</p>
 					 </div>
 					 <div class="viw">
-						<a href="design.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>View</a>
+						<a href="#/"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Select</a>
 					 </div>
 				  </a>
 			 </div>
 			 <div class="col-md-3 feature-grid">
-				 <a href="design.html"><img src="images/nameplate.jpg" alt=""/>	
+				 <a href="#/"><img src="images/nameplate.jpg" alt=""/>	
 					 <div class="arrival-info">
 						 <h4>Plate #4</h4>
 						 <p>$29.99</p>
 					 </div>
 					 <div class="viw">
-						<a href="design.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>View</a>
+						<a href="#/"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Select</a>
 					 </div>
 				  </a>
 			 </div>
@@ -248,6 +246,94 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 	 </div>
 </div>
+
+<div class="wording" style="padding: 2em 0">
+	<div class="container">
+		<h2 class="text-center" style="padding-bottom: 20px">Step 2. Enter Wording and Font</h2>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-2">
+				<label for="form-control">1. Top Line Text *</label>
+				<input class="form-control" id="" type="text" placeholder="Place Text Here">
+			</div>
+			<div class="col-md-4">
+				<label for="exampleFormControlSelect1">Select Font</label>
+				    <select class="form-control" id="exampleFormControlSelect1">
+				      <option>Double Line Script</option>
+				      <option>Clarendon</option>
+				      <option>Victoria</option>
+				      <option>Times New Roman</option>
+				      <option>Olde English</option>
+				      <option>Arial</option>
+				    </select>
+			</div>	
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-2">
+				<label for="form-control">2. Second Line Text</label>
+				<input class="form-control" id="" type="text" placeholder="Place Text Here (if needed)">
+			</div>
+			<div class="col-md-4">
+				<label for="form-control">Select Font</label>
+				    <select class="form-control" id="exampleFormControlSelect1">
+				      <option>Double Line Script</option>
+				      <option>Clarendon</option>
+				      <option>Victoria</option>
+				      <option>Times New Roman</option>
+				      <option>Olde English</option>
+				      <option>Arial</option>
+				    </select>
+			</div>	
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-2">		
+				<label for="form-control">3. Third Line Text</label>
+				<input class="form-control" id="" type="text" placeholder="Place Text Here (if needed)">
+			</div>
+			<div class="col-md-4">
+				<label for="exampleFormControlSelect1">Select Font</label>
+				    <select class="form-control" id="exampleFormControlSelect1">
+				      <option>Double Line Script</option>
+				      <option>Clarendon</option>
+				      <option>Victoria</option>
+				      <option>Times New Roman</option>
+				      <option>Olde English</option>
+				      <option>Arial</option>
+				    </select>
+			</div>		
+		</div>
+	</div>	
+</div>
+
+<div class="attachSize" style="padding: 2em 0">
+	<div class="container">
+		<h2 class="text-center" style="padding-bottom: 20px">Step 3. Attachment Method and Font Sizing</h2>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-2">
+				<label for="form-control">Attachment Method</label>
+				<select class="form-control" id="exampleFormControlSelect1">
+				      <option>Brads</option>
+				      <option>Screws + $1.00</option>
+				     
+				    </select>
+			</div>
+			<div class="col-md-4">
+				<label for="exampleFormControlSelect1">Font Sizing</label>
+				    <select class="form-control" id="exampleFormControlSelect1">
+				      <option>All Lines Same Size</option>
+				      <option>Top Line Larger</option>
+				     
+				    </select>
+			</div>	
+		</div>
+
+		<div class="row" style="padding-bottom: 20px; padding-top: 20px;">
+			<div class="container">
+				<button type="button" class="col-md-4 col-md-offset-4 btn btn-primary btnDesign">Add to Cart</button>
+			</div>
+		</div>			
+	</div>	
+</div>
+
 <!---->
 <!-- <div class="offers">
 	 <div class="container">
